// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button renders correctly when disabled 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _md_2a1efe"
  disabled=""
>
  Disabled Button
</button>
`;

exports[`Button renders correctly with all props combined 1`] = `
<button
  class="_button_2a1efe _outline_2a1efe _lg_2a1efe custom-class"
  data-testid="complex-button"
  disabled=""
>
  Complex Button
</button>
`;

exports[`Button renders correctly with custom className 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _md_2a1efe custom-class"
>
  Custom Button
</button>
`;

exports[`Button renders correctly with default props 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _md_2a1efe"
>
  Click me
</button>
`;

exports[`Button renders correctly with large size 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _lg_2a1efe"
>
  Large Button
</button>
`;

exports[`Button renders correctly with medium size 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _md_2a1efe"
>
  Medium Button
</button>
`;

exports[`Button renders correctly with outline variant 1`] = `
<button
  class="_button_2a1efe _outline_2a1efe _md_2a1efe"
>
  Outline Button
</button>
`;

exports[`Button renders correctly with primary variant 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _md_2a1efe"
>
  Primary Button
</button>
`;

exports[`Button renders correctly with secondary variant 1`] = `
<button
  class="_button_2a1efe _secondary_2a1efe _md_2a1efe"
>
  Secondary Button
</button>
`;

exports[`Button renders correctly with small size 1`] = `
<button
  class="_button_2a1efe _primary_2a1efe _sm_2a1efe"
>
  Small Button
</button>
`;
